--- a/package.json
+++ b/package.json
@@ -5,23 +5,23 @@
   "dependencies": {
     "@redux-devtools/extension": "^3.2.2",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^14.2.0",
-    "axios": "^0.27.2",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
-    "i18next": "^21.8.1",
+    "i18next": "^21.6.15",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.0",
-    "react": "^18.1.0",
-    "react-bootstrap": "^2.3.1",
-    "react-dom": "^18.1.0",
-    "react-i18next": "^11.16.9",
-    "react-multi-select-component": "^4.2.5",
-    "react-redux": "^8.0.1",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.2.3",
+    "react-dom": "^17.0.2",
+    "react-i18next": "^11.16.5",
+    "react-multi-select-component": "^4.2.4",
+    "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.0",
     "recharts": "^2.1.9",
-    "redux": "^4.2.0",
+    "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
